Fix Infobox layout bug

--- a/components/UI/InfoBox/InfoBox.module.scss
+++ b/components/UI/InfoBox/InfoBox.module.scss
@@ -80,9 +80,3 @@
   background: rgba($c-red, 0.1);
   border: 1px solid $c-red;
 }
-
-.info {
-  @extend .download;
-  background: rgba($c-blue, 0.1);
-  border: 1px solid $c-blue;
-}
